--- a/index.html
+++ b/index.html
@@ -602,6 +602,13 @@
                   VA Адриана</p>
               </div>
             </div>
+            <div class="swiper-slide" data-swiper-id="3">
+              <div class="swiper-slide" data-swiper-id="3">
+                <img src="img/zagluska.png" class="photos" alt="фото участника команды">
+                <p>ророоро <br>
+                  CG Иллюстратор</p>
+              </div>
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
