--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       <article class="second_screen">
         <div class="btn_download">
-          <button class="demo"><a href="https://www.dropbox.com/scl/fi/4lu89tdbk9kj278w1ffq5/Riseoftheether-1.0-win.zip?rlkey=0sba17bdhbnn1n43k80qdmr43&st=u4ct1ims&dl=0"></a>Скачать демо</a></button>
+          <button class="demo"><a href="https://www.dropbox.com/scl/fi/4lu89tdbk9kj278w1ffq5/Riseoftheether-1.0-win.zip?rlkey=0sba17bdhbnn1n43k80qdmr43&st=2kv1bw13&dl=0"></a>Скачать демо</a></button>
           <button class="busty"><a href="https://www.donationalerts.com/r/riseoftheether">Поддержать</a></button>
         </div>
       </article>
@@ -605,7 +605,7 @@
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <img src="img/zagluska.png" class="photos" alt="фото участника команды">
-                <p>ророоро <br>
+                <p>Olivojl<br>
                   CG Иллюстратор</p>
               </div>
             </div>
@@ -638,7 +638,7 @@
                 <picture><source srcset="img/photo_8.webp" type="image/webp"><img src="img/photo_8.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/bobreshow">Alexey Bobreshow.</a><br>VA Лукаса, Лорана, композитор</p></div>
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://#">ролорлроолор.</a><br>CG Иллюстратор</p></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://#">Olivojl</a><br>CG Иллюстратор</p></div>
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
             </div>
             <div class="swiper-pagination"></div>
