--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
 
       <article class="second_screen">
         <div class="btn_download">
-          <button class="demo"><a href="https://www.dropbox.com/scl/fi/4lu89tdbk9kj278w1ffq5/Riseoftheether-1.0-win.zip?rlkey=0sba17bdhbnn1n43k80qdmr43&st=2kv1bw13&dl=0"></a>Скачать демо</a></button>
+          <button class="demo" onclick="window.location.href=' https://www.dropbox.com/scl/fi/4lu89tdbk9kj278w1ffq5/Riseoftheether-1.0-win.zip?rlkey=0sba17bdhbnn1n43k80qdmr43&st=2kv1bw13&dl=1'">
+  Скачать демо
+</button>
           <button class="busty"><a href="https://www.donationalerts.com/r/riseoftheether">Поддержать</a></button>
         </div>
       </article>
