--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
-                <img src="img/zagluska.png" class="photos" alt="фото участника команды">
+                <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
                 <p>Olivojl<br>
                   CG Иллюстратор</p>
               </div>
