--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_5.webp" type="image/webp"><img src="img/photo_5.png" class="vafreya photos" alt="фото участника команды"></picture>
-                <p><a href="https://t.me/summerwithin">Alice Cry.</a><br>
+                <p><a href="https://t.me/summerwithin">Alisa Fantastika.</a><br>
                   VA Фрейи</p>
               </div>
             </div>
@@ -630,7 +630,7 @@
                 <picture><source srcset="img/photo_3.webp" type="image/webp"><img src="img/photo_3.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://www.artstation.com/ketrinhein">Кэйтрин Гейн.</a><br>Художник по персонажам</p></div>
                 <picture><source srcset="img/photo_4.webp" type="image/webp"><img src="img/photo_4.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/summerwithin">Alice Cry.</a><br>VA Фрейи</p></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/summerwithin">Alisa Fantastika.</a><br>VA Фрейи</p></div>
                 <picture><source srcset="img/photo_5.webp" type="image/webp"><img src="img/photo_5.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://www.behance.net/a5577630">Ида Батыева.</a><br>Ui ux дизайнер</p></div>
                 <picture><source srcset="img/photo_9.webp" type="image/webp"><img src="img/photo_9.png" alt="bg"></picture></div>
