--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
-                <p>Olivojl<br>
+                <p><a href="https://www.behance.net/gallery/217930513/portfolio-graficheskij-dizajner-illjustrator">Елена Краснова</a><br>
                   CG Иллюстратор</p>
               </div>
             </div>
@@ -640,7 +640,7 @@
                 <picture><source srcset="img/photo_8.webp" type="image/webp"><img src="img/photo_8.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/bobreshow">Alexey Bobreshow.</a><br>VA Лукаса, Лорана, композитор</p></div>
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://#">Olivojl</a><br>CG Иллюстратор</p></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://www.behance.net/gallery/217930513/portfolio-graficheskij-dizajner-illjustrator">Елена Краснова</a><br>CG Иллюстратор</p></div>
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
             </div>
             <div class="swiper-pagination"></div>
