--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
           <div class="titile_advantage" data-aos="fade-left">
             <h2 class="advantage">Протяженность</h2>
             <p class="subtitle_advantage">Количество эпизодов 16. <br>
-              Около 12 концовок, включая мини-финалы<br>
+              Около 12 концовок, включая мини-финалы.<br>
               Количество времени (1 эпизод 40мин).
               </p>
           </div>
