--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
-                <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
+                <picture><source srcset="img/photo_10.webp" type="image/webp"><img src="img/photo_10.png" class="photos" alt="фото участника команды"></picture>
                 <p><a href="https://www.behance.net/gallery/217930513/portfolio-graficheskij-dizajner-illjustrator">Елена Краснова</a><br>
                   CG Иллюстратор</p>
               </div>
@@ -641,7 +641,7 @@
               <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/bobreshow">Alexey Bobreshow.</a><br>VA Лукаса, Лорана, композитор</p></div>
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://www.behance.net/gallery/217930513/portfolio-graficheskij-dizajner-illjustrator">Елена Краснова</a><br>CG Иллюстратор</p></div>
-                <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
+                <picture><source srcset="img/photo_10.webp" type="image/webp"><img src="img/photo_10.png" alt="bg"></picture></div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
