--- a/index.html
+++ b/index.html
@@ -611,6 +611,13 @@
                   CG Иллюстратор</p>
               </div>
             </div>
+            <div class="swiper-slide" data-swiper-id="3">
+              <div class="swiper-slide" data-swiper-id="3">
+                <picture><source srcset="img/photo_11.webp" type="image/webp"><img src="img/photo_11.png" class="photos" alt="фото участника команды"></picture>
+                <p><a href="https://t.me/Ivem_Em">Джамиля Мухаметшина aka Ivem</a><br>
+                  Локализатор</p>
+              </div>
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -642,6 +649,8 @@
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://www.behance.net/gallery/217930513/portfolio-graficheskij-dizajner-illjustrator">Елена Краснова</a><br>CG Иллюстратор</p></div>
                 <picture><source srcset="img/photo_10.webp" type="image/webp"><img src="img/photo_10.png" alt="bg"></picture></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/Ivem_Em">Джамиля Мухаметшина aka Ivem</a><br>Локализатор</p></div>
+                <picture><source srcset="img/photo_11.webp" type="image/webp"><img src="img/photo_11.png" alt="bg"></picture></div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
@@ -754,3 +763,4 @@
   <!-- </div> -->
 
 </body>
+
