--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       <article class="second_screen">
         <div class="btn_download">
-          <button class="demo" onclick="window.location.href=' https://www.dropbox.com/scl/fi/4lu89tdbk9kj278w1ffq5/Riseoftheether-1.0-win.zip?rlkey=0sba17bdhbnn1n43k80qdmr43&st=2kv1bw13&dl=1'">
+          <button class="demo" onclick="window.location.href=' https://www.dropbox.com/scl/fi/7n7zs5wqk42kr0jz8u7oz/Riseoftheether-2.0-win.zip?rlkey=wq4202g8arxc3x6fsvouleb1j&st=aoc4fcms&dl=0'">
   Скачать демо
 </button>
           <button class="busty"><a href="https://www.donationalerts.com/r/riseoftheether">Поддержать</a></button>
@@ -763,4 +763,5 @@
   <!-- </div> -->
 
 </body>
+
 
