--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
       <article class="game_description">
         <div class="game_description_title">
           <h2>Сюжет истории:</h2>
-          <p>19 век, древние века давно позади, на пороге — эпоха индустриального развития, мир начинает открывать для себя новые технологические возможности.
+          <p>XIX век. Древние века давно позади, на пороге — эпоха индустриального развития: мир начинает открывать для себя новые технологические возможности.
             <br>
             Парагон — город, добившийся успехов в области применения пара как энергии. Но полноценно перейти к использованию этих технологий ему не суждено.
             <br>
-            После события произошедшего 50 лет назад были обнаружены люди, обладающие экстраординарными силами. Их прозвали "эстеры", ведь их дар зиждется на преобразовании мирового эфира. Под предлогом того, что они представляют опасность, эстеров начали преследовать, устроив целую "охоту на ведьм". Этот инцидент расколол общество, люди и эстеры начали с опаской относиться друг к другу.</p>
+            После события произошедшего 50 лет назад были обнаружены люди, обладающие экстраординарными силами. Их прозвали "эстеры", ведь их дар зиждется на преобразовании мирового эфира. Под предлогом того, что они представляют опасность, эстеров начали преследовать, устроив целую "охоту на ведьм". Этот инцидент расколол общество: люди и эстеры начали с опаской относиться друг к другу.</p>
         </div>
       </article>
 
@@ -763,6 +763,7 @@
   <!-- </div> -->
 
 </body>
+
 
 
 
