--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> Эстер</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 01.12. <br>
-                  <span class="subtitle_info">Рост:</span> 175см. <br>
+                  <span class="subtitle_info">Рост:</span> 175 см. <br>
                   <span class="subtitle_info">Способности:</span> манипуляция кровью.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> качественный табак. <br>
                   <span class="subtitle_info">Не нравится:</span> когда кто-то пытается лезть в ее планы. <br>
@@ -242,7 +242,7 @@
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> человек</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 15.08. <br>
-                  <span class="subtitle_info">Рост:</span> 187см. <br>
+                  <span class="subtitle_info">Рост:</span> 187 см. <br>
                   <span class="subtitle_info">Способности:</span> отлично владеет огнестрельным оружием.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> когда вокруг царит спокойствие.<br>
                   <span class="subtitle_info">Не нравится:</span> попирание справедливости. <br>
@@ -255,7 +255,7 @@
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> человек</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 07.06. <br>
-                  <span class="subtitle_info">Рост:</span> 178см. <br>
+                  <span class="subtitle_info">Рост:</span> 178 см. <br>
                   <span class="subtitle_info">Способности:</span> наравне владеет отлично холодным и огнестрельным оружием.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> чистка оружия, вечерние прогулки с женой. <br>
                   <span class="subtitle_info">Не нравится:</span> хруст в коленях. <br>
@@ -268,10 +268,10 @@
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> эстер</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 10.10. <br>
-                  <span class="subtitle_info">Рост:</span> 177см. <br>
+                  <span class="subtitle_info">Рост:</span> 177 см. <br>
                   <span class="subtitle_info">Способности:</span> зрение звезд.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> проводить время с близкими. <br>
-                  <span class="subtitle_info">Не нравится:</span> пустую трату времени. <br>
+                  <span class="subtitle_info">Не нравится:</span> пустая трата времени. <br>
                   <span class="subtitle_info">Хобби:</span> чтение фантастики.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">О персонаже:</span> родился уже после начала «охоты на ведьм». Благодаря своему обаянию легко входит в доверие.</p>
               </div>
@@ -280,8 +280,8 @@
               <picture><source srcset="img/charters2-1.webp" type="image/webp"><img src="img/charters2-1.png" alt="charter"></picture>
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> Эстер</h3>
-                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0:02. <br>
-                  <span class="subtitle_info">Рост:</span> 180см <br>
+                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0.02. <br>
+                  <span class="subtitle_info">Рост:</span> 180 см <br>
                   <span class="subtitle_info">Способности:</span> регенерация, исцеление.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> котики. <br>
                   <span class="subtitle_info">Не нравится:</span> видеть страдания других. <br>
@@ -294,8 +294,8 @@
               <picture><source srcset="img/charters4-1.webp" type="image/webp"><img src="img/charters4-1.png" alt="charter"></picture>
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> человек</h3>
-                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0:01. <br>
-                  <span class="subtitle_info">Рост:</span> 185см. <br>
+                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0.01. <br>
+                  <span class="subtitle_info">Рост:</span> 185 см. <br>
                   <span class="subtitle_info">Способности:</span> хорошие навыки в области науки.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> коллекционные предметы искусства. <br>
                   <span class="subtitle_info">Не нравится:</span> когда не получает того, чего хочет <br>
@@ -307,8 +307,8 @@
               <picture><source srcset="img/charters5-1.webp" type="image/webp"><img src="img/charters5-1.webp" alt="charter"></picture>
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> эстер</h3>
-                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0:10. <br>
-                  <span class="subtitle_info">Рост:</span> 190см. <br>
+                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0.10. <br>
+                  <span class="subtitle_info">Рост:</span> 190 см. <br>
                   <span class="subtitle_info">Способности:</span> создание плотоядного оружия.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> запах свежесварённого кофе. <br>
                   <span class="subtitle_info">Не нравится:</span> люди, в особенности аристократы. <br>
@@ -321,7 +321,7 @@
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> эстер</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 01.28. <br>
-                  <span class="subtitle_info">Рост:</span> 165см. <br>
+                  <span class="subtitle_info">Рост:</span> 165 см. <br>
                   <span class="subtitle_info">Способности:</span> музыкальная партитура, влияющая на психику.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> Один человек, о котором она не хочет говорить. <br>
                   <span class="subtitle_info">Не нравится:</span> когда интерес её избранника задерживается на ком-то. <br>
@@ -334,7 +334,7 @@
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> человек</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 18.04. <br>
-                  <span class="subtitle_info">Рост:</span> 180см. <br>
+                  <span class="subtitle_info">Рост:</span> 180 см. <br>
                   <span class="subtitle_info">Способности:</span> в области научной деятельности.
                   </p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> Часы и механизмы.<br>
@@ -355,7 +355,7 @@
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> Эстер</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 01.12. <br>
-                  <span class="subtitle_info">Рост:</span> 175см. <br>
+                  <span class="subtitle_info">Рост:</span> 175 см. <br>
                   <span class="subtitle_info">Способности:</span> манипуляция кровью.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> качественный табак. <br>
                   <span class="subtitle_info">Не нравится:</span> когда кто-то пытается лезть в ее планы. <br>
@@ -368,8 +368,8 @@
               <div class="info_charters" data-aos="fade-up"
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> человек</h3>
-                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 15:08. <br>
-                  <span class="subtitle_info">Рост:</span> 187см. <br>
+                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 15.08. <br>
+                  <span class="subtitle_info">Рост:</span> 187 см. <br>
                   <span class="subtitle_info">Способности:</span> отлично владеет огнестрельным оружием.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> когда вокруг царит спокойствие. <br>
                   <span class="subtitle_info">Не нравится:</span> попирательство справедливости. <br>
@@ -383,7 +383,7 @@
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> человек</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 07.06. <br>
-                  <span class="subtitle_info">Рост:</span> 178см. <br>
+                  <span class="subtitle_info">Рост:</span> 178 см. <br>
                   <span class="subtitle_info">Способности:</span> нарвне отлично владеет холодным и огнестрельным оружием.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> чистка оружия, вечерние прогулки с женой. <br>
                   <span class="subtitle_info">Не нравится:</span> хруст в коленях. <br>
@@ -397,10 +397,10 @@
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> эстер</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 10.10. <br>
-                  <span class="subtitle_info">Рост:</span> 177см. <br>
+                  <span class="subtitle_info">Рост:</span> 177 см. <br>
                   <span class="subtitle_info">Способности:</span> зрение звезд.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> проводить время с близкими. <br>
-                  <span class="subtitle_info">Не нравится:</span> пустую трату времени. <br>
+                  <span class="subtitle_info">Не нравится:</span> пустая трата времени. <br>
                   <span class="subtitle_info">Хобби:</span> чтение фантастики.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">О персонаже:</span> родился уже после начала «охоты на ведьм». Благодаря своему обаянию легко входит в доверие.</p>
               </div>
@@ -410,8 +410,8 @@
               <div class="info_charters" data-aos="fade-up"
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> Эстер</h3>
-                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0:02. <br>
-                  <span class="subtitle_info">Рост:</span> 180см <br>
+                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0.02. <br>
+                  <span class="subtitle_info">Рост:</span> 180 см <br>
                   <span class="subtitle_info">Способности:</span> регенерация, исцеление.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> котики. <br>
                   <span class="subtitle_info">Не нравится:</span> видеть страдания других. <br>
@@ -425,8 +425,8 @@
               <div class="info_charters" data-aos="fade-up"
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> человек</h3>
-                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0:01. <br>
-                  <span class="subtitle_info">Рост:</span> 185см. <br>
+                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0.01. <br>
+                  <span class="subtitle_info">Рост:</span> 185 см. <br>
                   <span class="subtitle_info">Способности:</span> хорошие навыки в области науки.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> коллекционные предметы искусства.<br>
                   <span class="subtitle_info">Не нравится:</span> когда не получает того, чего хочет. <br>
@@ -439,8 +439,8 @@
               <div class="info_charters" data-aos="fade-up"
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> эстер</h3>
-                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0:10. <br>
-                  <span class="subtitle_info">Рост:</span> 190см. <br>
+                <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0.10. <br>
+                  <span class="subtitle_info">Рост:</span> 190 см. <br>
                   <span class="subtitle_info">Способности:</span> создание плотоядного оружия.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> запах свежесварённого кофе. <br>
                   <span class="subtitle_info">Не нравится:</span> люди, в особенности аристократы. <br>
@@ -454,7 +454,7 @@
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> эстер</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 01.28. <br>
-                  <span class="subtitle_info">Рост:</span> 165см. <br>
+                  <span class="subtitle_info">Рост:</span> 165 см. <br>
                   <span class="subtitle_info">Способности:</span> музыкальная партитура, влияющая на психику.</p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> один человек, о котором она не хочет говорить. <br>
                   <span class="subtitle_info">Не нравится:</span> Когда интерес её избранника задерживается на ком-то. <br>
@@ -468,7 +468,7 @@
       data-aos-anchor-placement="top-bottom">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> человек</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 18.04. <br>
-                  <span class="subtitle_info">Рост:</span> 180см. <br>
+                  <span class="subtitle_info">Рост:</span> 180 см. <br>
                   <span class="subtitle_info">Способности:</span> в области научной деятельности.
                   </p>
                 <p class="subtitle_charter"><span class="subtitle_info">Нравится:</span> часы и механизмы.<br>
@@ -504,10 +504,10 @@
               Механика инвентаря.</p>
           </div>
           <div class="titile_advantage" data-aos="fade-left">
-            <h2 class="advantage">Протяженность</h2>
+            <h2 class="advantage">Продолжительность</h2>
             <p class="subtitle_advantage">Количество эпизодов 16. <br>
-              Около 12 концовок, включая мини-финалы.<br>
-              Количество времени (1 эпизод 40мин).
+              Количество времени на 1 эпизод 1 час.<br>
+              Около 12 концовок, включая мини-финалы.
               </p>
           </div>
         </div>
@@ -532,7 +532,7 @@
       </article>
 
       <article class="seventh_screen2" data-aos="zoom-in-up">
-        <h2 class="company">Команда работающая над проектом</h2>
+        <h2 class="company">Команда, работающая над проектом</h2>
 
         <div class="swiper mySwiper swiper-3" data-swiper-id="3">
           <div class="swiper-wrapper">
@@ -594,7 +594,7 @@
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
                 <p><a href="https://t.me/bobreshow">Alexey Bobreshow.</a><br>
-                  VA Лукаса, Лорана, композитор</p>
+                  VA Лорана, композитор</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
@@ -645,7 +645,7 @@
                 <picture><source srcset="img/photo_7.webp" type="image/webp"><img src="img/photo_7.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="http://#">Traff.</a><br>VA Адриана</p></div>
                 <picture><source srcset="img/photo_8.webp" type="image/webp"><img src="img/photo_8.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/bobreshow">Alexey Bobreshow.</a><br>VA Лукаса, Лорана, композитор</p></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/bobreshow">Alexey Bobreshow.</a><br>VA Лорана, композитор</p></div>
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://www.behance.net/gallery/217930513/portfolio-graficheskij-dizajner-illjustrator">Елена Краснова</a><br>CG Иллюстратор</p></div>
                 <picture><source srcset="img/photo_10.webp" type="image/webp"><img src="img/photo_10.png" alt="bg"></picture></div>
@@ -731,7 +731,7 @@
 
     <footer>
     <div class="link_follow">
-      <h3 class="title_footer">Где можно нас найти</h3>
+      <h3 class="title_footer">Где нас найти</h3>
       <div class="icon-list">
         <a href="https://t.me/Riseoftheether" target="_blank" rel="noopener noreferrer"><i class="fab fa-telegram"></i></a>
         <a href="https://rissegloom.itch.io/riseoftheetherru" target="_blank" rel="noopener noreferrer"><i class="fab fa-itch-io"></i></a>
@@ -763,6 +763,7 @@
   <!-- </div> -->
 
 </body>
+
 
 
 
