--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="2">
-              <picture><source srcset="img/charters2-1.webp" type="image/webp"><img src="img/charters2-1.webp" alt="charter"></picture>
+              <picture><source srcset="img/charters2.png" type="image/webp"><img src="img/charters2.webp" alt="charter"></picture>
               <div class="info_charters">
                 <h3 class="titile_charter"><span class="title_info">Раса:</span> Эстер</h3>
                 <p class="subtitle_charter"><span class="subtitle_info">День рождения:</span> 0.02. <br>
@@ -763,6 +763,7 @@
   <!-- </div> -->
 
 </body>
+
 
 
 
