--- a/index.html
+++ b/index.html
@@ -538,69 +538,75 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide" data-swiper-id="3">
               <picture><source srcset="img/photo_1.webp" type="image/webp"><img src="img/photo_1.jpg" class="timlid photos" alt="фото участника команды"></picture>
-              <p class="timlid_title"><a href="https://berlogalisy.wordpress.com/">Ярославна Лисицына.</a><br>
+              <p class="timlid_title"><a href="https://berlogalisy.wordpress.com/">Ярославна Лисицына</a><br>
                 Тимлид, разработчик</p>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_2.webp" type="image/webp"><img src="img/photo_2.png" class="screenwriter photos" alt="фото участника команды"></picture>
-                <p class="screenwriter_title"><a href="http://#">Дарья Бармалей.</a><br>
+                <p class="screenwriter_title"><a href="http://#">Дарья Бармалей</a><br>
                   Со-автор, сценарист</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_3.webp" type="image/webp"><img src="img/photo_3.png" class="beta photos" alt="фото участника команды"></picture>
-                <p class="beta_title"><a href="https://t.me/CandBNews">Anna Lizard.</a><br>
+                <p class="beta_title"><a href="https://t.me/CandBNews">Anna Lizard</a><br>
                   Корректор, бета</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_4.webp" type="image/webp"><img src="img/photo_4.png" class="arter photos" alt="фото участника команды"></picture>
-                <p><a href="https://www.artstation.com/ketrinhein">Кэйтрин Гейн.</a><br>
+                <p><a href="https://www.artstation.com/ketrinhein">Кэйтрин Гейн</a><br>
                   Художник по персонажам</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_5.webp" type="image/webp"><img src="img/photo_5.png" class="vafreya photos" alt="фото участника команды"></picture>
-                <p><a href="https://t.me/summerwithin">Alisa Fantastika.</a><br>
+                <p><a href="https://t.me/summerwithin">Alisa Fantastika</a><br>
                   VA Фрейи</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_9.webp" type="image/webp"><img src="img/photo_9.jpg" class="photos" alt="фото участника команды"></picture>
-                <p><a href="https://www.behance.net/a5577630">Ида Батыева.</a><br>
+                <p><a href="https://www.behance.net/a5577630">Ида Батыева</a><br>
                   Ui ux дизайнер</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_7.webp" type="image/webp"><img src="img/photo_7.jpg" class="photos" alt="фото участника команды"></picture>
-                <p><a href="https://Kattyverse.ru">Katty Verse.</a><br>
-                  Композитор основных треков</p>
+                <p><a href="https://Kattyverse.ru">Katty Verse</a><br>
+                  Композитор</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_6.webp" type="image/webp"><img src="img/photo_6.jpg" class="photos" alt="фото участника команды"></picture>
-                <p>Расул. <br>
+                <p>Расул <br>
                   VA Бернарда</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
-                <p><a href="https://t.me/bobreshow">Alexey Bobreshow.</a><br>
+                <p><a href="https://t.me/bimb0013">Семен Головин</a><br>
+                  VA Лукаса</p>
+              </div>
+            <div class="swiper-slide" data-swiper-id="3">
+              <div class="swiper-slide" data-swiper-id="3">
+                <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
+                <p><a href="https://t.me/bobreshow">Alexey Bobreshow</a><br>
                   VA Лорана, композитор</p>
               </div>
             </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/photo_8.webp" type="image/webp"><img src="img/photo_8.jpg" class="photos" alt="фото участника команды"></picture>
-                <p>Traffalgar. <br>
+                <p>Traffalgar <br>
                   VA Адриана</p>
               </div>
             </div>
@@ -617,6 +623,12 @@
                 <p><a href="https://t.me/Ivem_Em">Джамиля Мухаметшина aka Ivem</a><br>
                   Локализатор</p>
               </div>
+            <div class="swiper-slide" data-swiper-id="3">
+              <div class="swiper-slide" data-swiper-id="3">
+                <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
+                <p><a href="https://t.me/MiroslavaAutumn">Ольга Аверина</a><br>
+                  Композитор</p>
+              </div>
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -626,31 +638,35 @@
           <div class="x">
             <div class="swiper mySwiper swiper-7" data-swiper-id="7">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" data-swiper-id="6"><div class="text_p"><p><a href="https://berlogalisy.wordpress.com/">Ярославна Лисицына.</a><br>
+              <div class="swiper-slide" data-swiper-id="6"><div class="text_p"><p><a href="https://berlogalisy.wordpress.com/">Ярославна Лисицына</a><br>
                 Тимлид, разработчик</p></div>
                 <picture><source srcset="img/photo_1.webp" type="image/webp"><img src="img/photo_1.jpg"        alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p">
-                  <p><a href="http://#">Дарья Бармалей.</a><br>Со-автор, сценарист</p>
+                  <p><a href="http://#">Дарья Бармалей</a><br>Со-автор, сценарист</p>
                 </div>
                 <picture><source srcset="img/photo_2.webp" type="image/webp"><img src="img/photo_2.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/CandBNews">Anna Lizard.</a><br>Корректор, бета</p></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/CandBNews">Anna Lizard</a><br>Корректор, бета</p></div>
                 <picture><source srcset="img/photo_3.webp" type="image/webp"><img src="img/photo_3.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://www.artstation.com/ketrinhein">Кэйтрин Гейн.</a><br>Художник по персонажам</p></div>
                 <picture><source srcset="img/photo_4.webp" type="image/webp"><img src="img/photo_4.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/summerwithin">Alisa Fantastika.</a><br>VA Фрейи</p></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/summerwithin">Alisa Fantastika</a><br>VA Фрейи</p></div>
                 <picture><source srcset="img/photo_5.webp" type="image/webp"><img src="img/photo_5.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://www.behance.net/a5577630">Ида Батыева.</a><br>Ui ux дизайнер</p></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://www.behance.net/a5577630">Ида Батыева</a><br>Ui ux дизайнер</p></div>
                 <picture><source srcset="img/photo_9.webp" type="image/webp"><img src="img/photo_9.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://Kattyverse.ru">Katty Verse.</a><br>Композитор основных треков</p></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://Kattyverse.ru">Katty Verse</a><br>Композитор</p></div>
                 <picture><source srcset="img/photo_7.webp" type="image/webp"><img src="img/photo_7.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="http://#">Traff.</a><br>VA Адриана</p></div>
                 <picture><source srcset="img/photo_8.webp" type="image/webp"><img src="img/photo_8.png" alt="bg"></picture></div>
-              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/bobreshow">Alexey Bobreshow.</a><br>VA Лорана, композитор</p></div>
+            <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/bimb0013"></a>Семен Головин<br>VA Лукаса</p></div>
+                <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/bobreshow">Alexey Bobreshow</a><br>VA Лорана, композитор</p></div>
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://www.behance.net/gallery/217930513/portfolio-graficheskij-dizajner-illjustrator">Елена Краснова</a><br>CG Иллюстратор</p></div>
                 <picture><source srcset="img/photo_10.webp" type="image/webp"><img src="img/photo_10.png" alt="bg"></picture></div>
               <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/Ivem_Em">Джамиля Мухаметшина aka Ivem</a><br>Локализатор</p></div>
                 <picture><source srcset="img/photo_11.webp" type="image/webp"><img src="img/photo_11.png" alt="bg"></picture></div>
+              <div class="swiper-slide"><div class="text_p"><p><a href="https://t.me/MiroslavaAutumn">Ольга Аверина</a><br>Композитор</p></div>
+                <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" alt="bg"></picture></div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
@@ -763,6 +779,7 @@
   <!-- </div> -->
 
 </body>
+
 
 
 
