--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       <article class="second_screen">
         <div class="btn_download">
-          <button class="demo" onclick="window.location.href=' https://www.dropbox.com/scl/fi/7n7zs5wqk42kr0jz8u7oz/Riseoftheether-2.0-win.zip?rlkey=wq4202g8arxc3x6fsvouleb1j&st=aoc4fcms&dl=1'">
+          <button class="demo" onclick="window.location.href=' https://www.dropbox.com/scl/fi/ynozy1tz30yjsmggvcogs/Riseoftheether-3.0-win.zip?rlkey=14yh7fy0j0i7kw7dlb3f1awxf&st=da6on96a&dl=1'">
   Скачать демо
 </button>
           <button class="busty"><a href="https://www.donationalerts.com/r/riseoftheether">Поддержать</a></button>
@@ -779,6 +779,7 @@
   <!-- </div> -->
 
 </body>
+
 
 
 
