--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <title>Визуальная новелла "Восход Эфира", казуальная игра в жанре стимпанк</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTNWDRSRZ3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-ZTNWDRSRZ3');
+</script>
 <body class="body">
 
   <!-- <div class="container"> -->
@@ -779,6 +787,7 @@
   <!-- </div> -->
 
 </body>
+
 
 
 
